--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">CoolWeather</string>
+    <string name="app_name">酷欧天气-学习版本</string>
     
     <string name="forecast">预报</string>
     <string name="aqi">空气质量</string>
